--- a/kontext/src/app/content/content.component.html
+++ b/kontext/src/app/content/content.component.html
@@ -1,30 +1,9 @@
 <!-- BEGIN CONTENT ROUTE-->
-<div class="content" style="margin-top: 75px;">
-  <div class="container col-xs-10 col-xs-offset-2">
+<div class="section">
+  <div [ngClass]="{'container col-xs-9 col-xs-offset-3': tree,'container col-xs-12': !tree}"
+       style="margin-top: 60px;">
     <!--<button class="btn btn-primary" (click)="log()">Log</button>-->
-    <!--<router-outlet></router-outlet>-->
+    <router-outlet></router-outlet>
+    <app-crud></app-crud>
   </div>
 </div>
-<!-- END CONTENT ROUTE -->
-
-<!--&lt;!&ndash; BEGIN OFFCANVAS RIGHT &ndash;&gt;-->
-<div class="offcanvas" id="filterOffCanvas">
-  <div id="offcanvas-right" class="offcanvas-pane width-12">
-    <div class="offcanvas-head">
-      <header>Project Filter</header>
-      <div class="offcanvas-tools">
-        <a class="btn btn-icon-toggle btn-default-light pull-right" data-dismiss="offcanvas">
-          <i class="md md-close"></i>
-        </a>
-      </div>
-    </div>
-    <div class="offcanvas-body">
-      <app-filter></app-filter>
-    </div>
-  </div>
-</div>
-<!--END OFFCANVAS RIGHT-->
-
-
-
-
