--- a/kontext/src/app/content/details/project-details.component.html
+++ b/kontext/src/app/content/details/project-details.component.html
@@ -1,75 +1,87 @@
-<div class="section-header">
-  <ol class="breadcrumb">
-    <li><a routerLink="/home">home</a></li>
-    <li class="active">{{project.name}}</li>
-  </ol>
-</div>
+<div *ngIf="project">
+  <div class="section-header">
+    <ol class="breadcrumb">
+      <li><a routerLink="/" (click)="updateMenuTree()">home</a></li>
+      <li class="active">{{project.name}}</li>
+    </ol>
+  </div>
 
-<h2 class="text-light text-center">
-  {{project.name}}<br><small class="text-primary">
-  Project-Details</small></h2>
-<!--DETAILS-->
-<div class="col-xs-10 col-xs-offset-1" style="margin-top: 25px;" *ngIf="!isEmpty(project)">
-  <div class="card">
-    <div class="card-head">
-      <header>Description </header>
-    </div>
-    <div class="card-body" style="margin-top: -30px;">
-      <div style="padding-left: 3em;">
-        <ul class="text-muted list-group list-comments">
-          <li class="text-muted">
-            Project Type: <span class="text-primary">{{project.project_type}}</span>
-          </li>
-          <li class="text-muted" style="margin-top: -15px;">
-            Customer: <span class="text-primary">{{project.customer}}</span>
-          </li>
-          <li class="text-muted" style="margin-top: -15px;">
-            Date Modified: <span class="text-primary">{{project.date_modified | convertToSlashes: "_"}}</span>
-          </li>
-        </ul>
-        <div>
-          <div id="inlineContent1"
-             class="col-md-12 cke_editable cke_editable_inline cke_contents_ltr"
-             contenteditable="true"
-             tabindex="0"
-             spellcheck="false"
-             role="textbox"
-             aria-label="Rich Text Editor, inlineContent1"
-             title="Rich Text Editor, inlineContent1"
-             aria-describedby="cke_110" style="position: relative; margin-left: -1em;">
-          <h4>Description</h4>
-          <p>{{project.details}}</p>
-        </div>
-        </div>
+  <h2 class="text-light text-center">
+    {{project.name}}<br><small class="text-primary">
+    Project-Details: {{project.project_type}}</small>
+  </h2>
+
+  <!--DETAILS-->
+  <div class="col-xs-10 col-xs-offset-1" style="margin-top: 25px;" *ngIf="!isEmpty(project)">
+    <div class="card">
+      <div class="card-head">
+        <header>Description </header>
       </div>
-      <div class="stick-bottom-right">
-        <!--<button class="btn btn-primary" (click)="log()">Log</button>-->
-      </div>
-    </div><!--end .card-body -->
-  </div><!--end .card -->
-</div>
-<!--ANALYSIS QUEUE-->
-<div class="col-xs-10 col-xs-offset-1" >
-  <div class="card">
-    <div class="card-head">
-      <header>Analysis Queue </header>
-    </div>
-    <div class="card-body">
+      <div class="card-body" style="margin-top: -30px;">
+        <div style="padding-left: 3em;">
+          <ul class="text-muted list-group list-comments">
+            <li class="text-muted">
+              Project Type: <span class="text-primary">{{project.project_type}}</span>
+            </li>
+            <li class="text-muted" style="margin-top: -15px;">
+              Customer: <span class="text-primary">{{project.customer}}</span>
+            </li>
+            <li class="text-muted" style="margin-top: -15px; margin-bottom: -15px;">
+              Date Modified: <span class="text-primary">{{project.date_modified | convertToSlashes: "_"}}</span>
+            </li>
+          </ul>
+          <div>
+            <form class="form"
+                  style="margin-top: 2px;"
+                  name="form"
+                  (ngSubmit)="f.form.valid && update()"
+                  #f="ngForm"
+                  role="form" novalidate>
+
+                <div class="form-group">
+                  <label for="description_edit" class="control-label">Description: </label>
+                  <textarea rows="10"
+                            cols="50"
+                            name="description_edit"
+                            [(ngModel)]="project.description"
+                            (change)="updateDescription()"
+                            #description="ngModel"
+                            id="description_edit"
+                            class="form-control" style="position: relative; margin-left: 1em;">
+                  </textarea>
+                  <div class="form-control-line"></div>
+                </div>
+            </form>
+          </div>
+        </div>
         <div class="stick-bottom-right">
         </div>
-    </div><!--end .card-body -->
-  </div><!--end .card -->
-</div>
-<!--MEMBERS-->
-<div class="col-xs-10 col-xs-offset-1" >
-  <div class="card">
-    <div class="card-head">
-      <header>Members</header>
+      </div>
     </div>
-    <div class="card-body">
-      {{project.owner_username}}
-        <div class="stick-bottom-right">
-        </div>
-    </div><!--end .card-body -->
-  </div><!--end .card -->
+  </div>
+  <!--ANALYSIS QUEUE-->
+  <div class="col-xs-10 col-xs-offset-1" >
+    <div class="card">
+      <div class="card-head">
+        <header>Analysis Queue </header>
+      </div>
+      <div class="card-body">
+          <div class="stick-bottom-right">
+          </div>
+      </div><!--end .card-body -->
+    </div><!--end .card -->
+  </div>
+  <!--MEMBERS-->
+  <div class="col-xs-10 col-xs-offset-1" >
+    <div class="card">
+      <div class="card-head">
+        <header>Members</header>
+      </div>
+      <div class="card-body">
+        {{project.owner_username}}
+          <div class="stick-bottom-right">
+          </div>
+      </div><!--end .card-body -->
+    </div><!--end .card -->
+  </div>
 </div>
