--- a/kontext/src/app/crud/forms/project.component.html
+++ b/kontext/src/app/crud/forms/project.component.html
@@ -7,79 +7,118 @@
      aria-labelledby="formModalLabel"
      aria-hidden="true"
      style="display: none;">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg" style="width: 75%">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 class="modal-title" id="projectCreateForm">Create A Project</h3>
+        <h3 class="modal-title" id="projectCreateForm">Create A New Project</h3>
         <p class="text-muted"><span class="text-primary" style="font-weight: bold;">*required</span>/optional</p>
       </div>
-      <form class="form-horizontal" role="form">
+      <form class="form-horizontal"
+            name="form"
+            (ngSubmit)="f.form.valid && create()"
+            #f="ngForm" novalidate>
         <div class="modal-body">
-          <div class="form-group">
+
+          <!--NAME-->
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !name.valid}">
             <div class="col-sm-3">
-              <label for="pr_name" class="text-primary" style="font-weight: bold;">*Name </label>
+              <label for="name" class="text-primary" style="font-weight: bold;">*Name </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" [(ngModel)]="new_project.name" name="name" id="pr_name" class="form-control" placeholder="Project Name">
+              <input type="text" [(ngModel)]="model.name"
+                     name="name"
+                     id="name"
+                     #name="ngModel"
+                     class="form-control"
+                     placeholder="Project Name"
+                     required>
+              <div class="help-block" *ngIf="f.submitted && !name.valid"> Project Name is required</div>
               <div class="form-control-line"></div>
             </div>
           </div>
-          <div class="form-group">
+
+          <!--NUMBER-->
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !number.valid}">
             <div class="col-sm-3">
-              <label for="pr_number" class="control-label">Number</label>
+              <label for="number" class="control-label">Number</label>
             </div>
             <div class="col-sm-9">
-              <input type="number" name="pr_number" id="pr_number" class="form-control" placeholder="Project Number">
+              <input type="number"
+                     name="number"
+                     id="number"
+                     [(ngModel)]="model.number"
+                     #number="ngModel"
+                     class="form-control"
+                     placeholder="Project Number">
               <div class="form-control-line"></div>
             </div>
           </div>
-          <div class="form-group">
+
+          <!--TYPE-->
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !project_type.valid}">
             <div class="col-sm-3">
-              <label for="pr_type" class="text-primary" style="font-weight: bold;">*Project Type</label>
+              <label for="project_type" class="text-primary" style="font-weight: bold;">*Project Type</label>
             </div>
             <div class="col-sm-9">
-              <select name="pr_type" class="form-control" id="pr_type">
-                <option> &nbsp;</option>
-                <option>Replacement</option>
-                <option>OE</option>
-                <option>Research</option>
+              <select name="project_type"
+                      [(ngModel)]="model.project_type"
+                      #project_type="ngModel"
+                      class="form-control"
+                      id="project_type" required>
+                <option [value]="null"></option>
+                <option [value]="'REP'">Replacement</option>
+                <option [value]="'OE'">OE</option>
+                <option [value]="'RES'">Research</option>
               </select>
             </div>
+            <div class="help-block" *ngIf="f.submitted && !type.valid"> Type is required</div>
+
           </div>
-          <div class="form-group">
+
+          <!--CUSTOMER-->
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !customer.valid}">
+            <div class="col-sm-3">
+              <label for="customer"
+                     class="control-label">Customer: </label>
+            </div>
+            <div class="col-sm-9">
+              <input type="text"
+                     name="customer"
+                     id="customer"
+                     class="form-control"
+                     [(ngModel)]="model.customer"
+                     #customer="ngModel"
+                     placeholder="Customer">
+              <div class="form-control-line"></div>
+            </div>
+          </div>
+
+           <!--DESCRIPTION-->
+          <div class="form-group" [ngClass]="{'has-error': f.submitted && !description.valid}">
             <div class="col-sm-3">
               <label for="description" class="control-label">Description: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="description" id="description" class="form-control" placeholder="Description">
-              <div class="form-control-line"></div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-3">
-              <label for="customer" class="control-label">Customer: </label>
-            </div>
-            <div class="col-sm-9">
-              <input type="text" name="customer" id="customer" class="form-control" placeholder="Customer">
-              <div class="form-control-line"></div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-3">
-              <label for="tag" class="control-label">Tag: </label>
-            </div>
-            <div class="col-sm-9">
-              <input type="text" name="tag" id="tag" class="form-control" placeholder="Tag">
+              <textarea rows="10"
+                        cols="50"
+                        name="description"
+                        [(ngModel)]="model.description"
+                        #description="ngModel"
+                        id="description"
+                        class="form-control">
+              </textarea>
               <div class="form-control-line"></div>
             </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-success-dark">Create and Add Project Phase</button>
-          <button type="button" class="btn btn-accent">Create and Add Another</button>
-          <button type="button" (click)="log()" class="btn btn-accent-dark">Create</button>
+          <div class="form-group">
+            <button type="button" (click)="create()" [disabled]="loading" class="btn btn-accent-dark">Create</button>
+            <button type="button" [disabled]="loading" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>
+            <button type="button" [disabled]="loading" class="btn btn-success-dark">Create and Add Project Phase</button>
+            <button type="button" [disabled]="loading" class="btn btn-accent">Create and Add Another</button>
+          </div>
         </div>
       </form>
     </div>
@@ -100,71 +139,100 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h4 class="modal-title" id="formModalLabel">Edit Project:</h4>
       </div>
-      <form class="form-horizontal" role="form">
+      <form class="form-horizontal" name="form" (ngSubmit)="f.form.valid && update()" #f="ngForm" novalidate>
         <div class="modal-body">
+          <!--PROJECT NAME-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="pr_name_edit" class="text-primary" style="font-weight: bold;">*Name </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="project_name" id="pr_name_edit" class="form-control" placeholder="Project Name">
+              <input type="text"
+                     name="project_name"
+                     id="pr_name_edit"
+                     [(ngModel)]="model.name"
+                     #name="ngModel"
+                     class="form-control"
+                     placeholder="Project Name">
               <div class="form-control-line"></div>
             </div>
           </div>
+
+          <!--PROJECT NUMBER-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="pr_number_edit" class="control-label">Number</label>
             </div>
             <div class="col-sm-9">
-              <input type="number" name="pr_number" id="pr_number_edit" class="form-control" placeholder="Project Number">
+              <input type="number"
+                     name="pr_number"
+                     [(ngModel)]="model.number"
+                     #number="ngModel"
+                     id="pr_number_edit"
+                     class="form-control"
+                     placeholder="Project Number">
               <div class="form-control-line"></div>
             </div>
           </div>
+
+          <!--PROJECT TYPE-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="pr_type_edit" class="text-primary" style="font-weight: bold;">*Project Type</label>
             </div>
             <div class="col-sm-9">
-              <select name="pr_type" class="form-control" id="pr_type_edit">
-                <option> &nbsp;</option>
-                <option>Replacement</option>
-                <option>OE</option>
-                <option>Research</option>
+              <select name="pr_type"
+                      [(ngModel)]="model.project_type"
+                      #project_type="ngModel"
+                      class="form-control"
+                      id="pr_type_edit">
+                <option [value]="null"></option>
+                <option [value]="'REP'">Replacement</option>
+                <option [value]="'OE'">OE</option>
+                <option [value]="'RES'">Research</option>
               </select>
             </div>
           </div>
-          <div class="form-group">
-            <div class="col-sm-3">
-              <label for="description_edit" class="control-label">Description: </label>
-            </div>
-            <div class="col-sm-9">
-              <input type="text" name="description" id="description_edit" class="form-control" placeholder="Description">
-              <div class="form-control-line"></div>
-            </div>
-          </div>
+
+           <!--CUSTOMER-->
           <div class="form-group">
             <div class="col-sm-3">
               <label for="customer_edit" class="control-label">Customer: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="customer" id="customer_edit" class="form-control" placeholder="Customer">
+              <input type="text"
+                     name="customer"
+                     [(ngModel)]="model.customer"
+                     #customer="ngModel"
+                     id="customer_edit"
+                     class="form-control"
+                     placeholder="Customer">
               <div class="form-control-line"></div>
             </div>
           </div>
+
+          <!--DESCRIPTION-->
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="tag_edit" class="control-label">Tag: </label>
+              <label for="description_edit" class="control-label">Description: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="tag" id="tag_edit" class="form-control" placeholder="Tag">
+              <textarea rows="10"
+                        cols="50"
+                        name="description"
+                        [(ngModel)]="model.description"
+                        #description="ngModel"
+                        id="description_edit"
+                        class="form-control">
+              </textarea>
               <div class="form-control-line"></div>
             </div>
           </div>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-accent">Save and Continue Editing</button>
-          <button type="button" class="btn btn-accent-dark">Update</button>
+          <button type="button" class="btn btn-accent-dark" (click)="update()">Update</button>
         </div>
       </form>
     </div>
@@ -179,52 +247,61 @@
      aria-labelledby="formModalLabel"
      aria-hidden="true"
      style="display: none;">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg" style="width: 75%">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title" id="projectDeleteLabel">Delete Project:</h4>
+        <h3 class="modal-title" id="projectDeleteLabel"><strong>Delete Project: {{model.name}}</strong></h3>
       </div>
       <form class="form-horizontal" role="form">
         <div class="modal-body">
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="pr_name_delete" class="text-primary" style="font-weight: bold;">*Name </label>
+              <label for="name_delete" class="text-primary" style="font-weight: bold;">*Name </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="project_name" id="pr_name_delete" class="form-control" placeholder="Project Name" disabled>
+              <input type="text"
+                     name="name"
+                     [(ngModel)]="model.name"
+                     #name="ngModel"
+                     id="name_delete"
+                     class="form-control"
+                     disabled>
               <div class="form-control-line"></div>
             </div>
           </div>
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="pr_number_delete" class="control-label">Number</label>
+              <label for="number_delete" class="control-label">Number</label>
             </div>
             <div class="col-sm-9">
-              <input type="number" name="pr_number" id="pr_number_delete" class="form-control" placeholder="Project Number" disabled>
+              <input type="number"
+                     name="number"
+                     [(ngModel)]="model.number"
+                     #number="ngModel"
+                     id="number_delete"
+                     class="form-control"
+                     disabled>
               <div class="form-control-line"></div>
             </div>
           </div>
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="pr_type_delete" class="text-primary" style="font-weight: bold;">*Project Type</label>
+              <label for="project_type_delete"
+                     class="text-primary" style="font-weight: bold;">*Project Type</label>
             </div>
             <div class="col-sm-9">
-              <select name="pr_type" class="form-control" id="pr_type_delete" disabled>
-                <option> &nbsp;</option>
-                <option>Replacement</option>
-                <option>OE</option>
-                <option>Research</option>
+              <select name="project_type"
+                      class="form-control"
+                      [(ngModel)]="model.project_type"
+                      #project_type="ngModel"
+                      id="project_type_delete"
+                      disabled>
+                <option [value]="null"></option>
+                <option [value]="'REP'">Replacement</option>
+                <option [value]="'OE'">OE</option>
+                <option [value]="'RES'">Research</option>
               </select>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-3">
-              <label for="description_edit" class="control-label">Description: </label>
-            </div>
-            <div class="col-sm-9">
-              <input type="text" name="description" id="description_delete" class="form-control" placeholder="Description" disabled>
-              <div class="form-control-line"></div>
             </div>
           </div>
           <div class="form-group">
@@ -232,24 +309,36 @@
               <label for="customer_delete" class="control-label">Customer: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="customer" id="customer_delete" class="form-control" placeholder="Customer" disabled>
+              <input type="text"
+                     name="customer"
+                     [(ngModel)]="model.customer"
+                     #customer="ngModel"
+                     id="customer_delete"
+                     class="form-control" disabled>
               <div class="form-control-line"></div>
             </div>
           </div>
           <div class="form-group">
             <div class="col-sm-3">
-              <label for="tag_delete" class="control-label">Tag: </label>
+              <label for="description_delete" class="control-label">Description: </label>
             </div>
             <div class="col-sm-9">
-              <input type="text" name="tag" id="tag_delete" class="form-control" placeholder="Tag" disabled>
+              <input type="text"
+                     name="description"
+                     id="description_delete"
+                     [(ngModel)]="model.description"
+                     #description="ngModel"
+                     class="form-control" disabled>
               <div class="form-control-line"></div>
             </div>
           </div>
+
         </div>
         <div class="modal-footer">
-           <button type="button" class="btn btn-default pull-left"
-                   data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-danger">Delete</button>
+           <div class="form-group">
+            <button type="button" (click)="destroy()" [disabled]="loading" class="btn btn-accent-dark">Delete</button>
+            <button type="button" [disabled]="loading" class="btn btn-danger ink-reaction pull-left" data-dismiss="modal">Cancel</button>
+          </div>
         </div>
       </form>
     </div>
